@@ -2,12 +2,12 @@
 # Contributor: Hussam Al-Tayeb <ht990332@gmail.com>
 
 pkgname=openoffice-base-beta
-pkgver=3.0_ooo300_m3
+pkgver=3.0_ooo300_m4
 pkgrel=1
 pkgdesc="OpenOffice.org - a free multiplatform and multilingual office suite"
 arch=(i686 x86_64)
-#_OO_milestone=ooo300-m3
-_OO_milestone=OOO300_m3
+#_OO_milestone=ooo300-m4
+_OO_milestone=OOO300_m4
 license=('LGPL3')
 url="http://www.openoffice.org"
 install=openoffice.install
@@ -18,7 +18,7 @@ makedepends=('bison' 'cvs' 'curl' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-l
              'boost' 'apache-ant' 'cairo' 'gperf' 'gconf' 'openjdk6>=1.2-1')
 provides=('openoffice-base')
 optdepends=("java-runtime: adds java support")
-source=(${pkgname}-${_OO_milestone}.tar.bz2
+source=(${pkgname}-${_OO_milestone}.tar.gz
 	template.desktop
 	default-no-startup-wizard.diff
 	default-system-fpicker.diff
@@ -30,7 +30,7 @@ source=(${pkgname}-${_OO_milestone}.tar.bz2
 	# from http://www.openoffice.org/issues/show_bug.cgi?id=81102
 	FontOOo_1.7.1.sxw)
 options=('!distcc' '!ccache' '!makeflags')
-md5sums=('cd19fc57ed82ecb0bcada88da41d3981'
+md5sums=('bd9439a1c5cb765f5b717470f6d6a003'
          'a247ba577007d8169201bd8f41cf41b5'
          '71f136a31e296a04ab68932a31dd533e'
          '6c596129fb48316226ce3adfd3a4c86d'
@@ -48,11 +48,11 @@ build() {
 	export 'CVSROOT=:pserver:anoncvs@anoncvs.services.openoffice.org:/cvs'
 	# checkout snapshot
 #	cvs -q -z9 co -r $_MILESTONE OpenOffice3
-#	tar -cvjf ../${pkgname}-${_OO_milestone}.tar.bz2 *
+#	tar -cvzf ../${pkgname}-${_OO_milestone}.tar.gz *
 #	return 1
 
 	# fetch missing modules
-	cvs -q -z9 co -r $_MILESTONE cppunit hyphen swext apache-commons tomcat
+	cvs -q -z9 co -r $_MILESTONE cppunit hyphen swext apache-commons tomcat reportbuilder
 
 
 
@@ -113,6 +113,7 @@ build() {
 	--disable-odk\
 	--disable-systray\
 	--disable-mathmldtd\
+	--disable-reportdesign\
 	--enable-gio\
 	--enable-gtk\
 	--enable-cups\
