@@ -11,7 +11,7 @@ echo " 2. Sun's JRE."
 echo " you will need it for \"help\" section and some java based wizards"
 echo " for further reading: http://wiki.services.openoffice.org/wiki/Java_and_OpenOffice.org"
 echo " "
-echo " >>KDE integration is no more supported!<<"
+echo " >>KDE integration is no longer supported!<<"
 echo " "
 echo " Please preset Gnome appearance always with"
 echo " \"export OOO_FORCE_DESKTOP=gnome\" even when"
